fixed slider alignment after window resizing

--- a/index.css
+++ b/index.css
@@ -22,18 +22,18 @@
   position: relative;
   width: 100%;
   height: 50%;
-  margin-top: 10px;
+  margin-top: 5%;
 }
 .leftSlider {
   position: absolute;
-  top: -100%;
+  top: -105%;
   left: 5%;
   width: 90%;
   height: 50%;
   background-color: transparent;
 }
 .rightSlider {
-  top: -100%;
+  top: -105%;
   left: 5%;
   width: 90%;
   height: 0%;
@@ -152,12 +152,20 @@ body {
   display: grid;
   grid-template-rows: 8vh 92vh;
   grid-template-columns: 20fr 80fr;
-  grid-template-areas: "header header"
-                       "filter results";
+  grid-template-areas:
+    "header header"
+    "filter results";
 }
-header { grid-area: header; }
-#sort-results { grid-area: results; overflow-y: scroll; }
-div.leftBar { grid-area: filter; }
+header {
+  grid-area: header;
+}
+#sort-results {
+  grid-area: results;
+  overflow-y: scroll;
+}
+div.leftBar {
+  grid-area: filter;
+}
 
 header {
   padding: 2em;
